--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 alembic==1.2.1
+bcrypt==3.1.7
+cffi==1.13.2
 Click==7.0
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+psycopg2==2.8.3
+pycparser==2.19
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.9
 Werkzeug==0.16.0
-psycopg2==2.8.3
